samples/_failures_safe/1761722633_95a897_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_020bf475.c: In function ‘main’:
./samples/SAFE/__tmp_020bf475.c:153:15: error: expected ‘;’ at end of input
  153 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_020bf475.c:153:9: error: expected declaration or statement at end of input
  153 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_020bf475.c:153:9: error: expected declaration or statement at end of input
